--- a/templates/sensor.yaml
+++ b/templates/sensor.yaml
@@ -104,6 +104,12 @@
           {{ [percentage_max, 100] | min }}
         {% endif %}
       unit_of_measurement: '%'
+    - name: "Energy Grid Consumption"
+      unit_of_measurement: "kWh"
+      device_class: energy
+      state_class: total_increasing
+      state: >
+        {{ states('input_number.energy_grid_consumption') | float(0) }}
 - binary_sensor:
   - name: "Home active"
     unique_id: "home_active"
@@ -252,3 +258,48 @@
         {% else %}
           {{ "" }}
         {% endif %}
+- triggers:
+  - trigger: time_pattern
+    hours: "/1"
+  sensor:
+    - name: "Fridge Energy"
+      unit_of_measurement: "kWh"
+      device_class: energy
+      state_class: total_increasing
+      icon: "mdi:fridge-outline"
+      state: >
+        {% set start_date = strptime("2023-01-01", "%Y-%m-%d") %}
+        {% set hours_passed = (now() - start_date.astimezone()).total_seconds() / 3600 %}
+        {% set hourly_rate = 148 / 8760 %}
+        {{ (hours_passed * hourly_rate) | round(2) }}
+- triggers:
+  - trigger: state
+    entity_id: sensor.oven_machine_state
+  sensor:
+    - name: "Oven Power"
+      unit_of_measurement: "W"
+      device_class: power
+      state_class: measurement
+      state: >
+        {% set running = is_state('sensor.oven_machine_state', 'running')  %}
+        {{ 1000.0 if running else 0.0 }}
+- triggers:
+  - trigger: state
+    entity_id:
+      - sensor.cooktop_burner_1_level
+      - sensor.cooktop_burner_2_level
+      - sensor.cooktop_burner_3_level
+      - sensor.cooktop_burner_4_level
+  sensor:
+    - name: "Cooktop Power"
+      unit_of_measurement: "W"
+      device_class: power
+      state_class: measurement
+      state: >
+        {% set ns = namespace(sum=0) -%}
+        {% for i in range(1, 5) -%}
+        {% set state = states("sensor.cooktop_burner_" ~ i ~ "_level") | int(0) -%}
+         {% set power = 2200 * (state / 15) ** 2 -%}
+         {% set ns.sum = ns.sum + power -%}
+        {% endfor -%}
+        {{ ns.sum }}
